# Postgram

./: .gitignore  Makefile  pyproject.toml  pytest.ini
CoreRoot/: settings.py  urls.py
core/: routers.py
core/abstract/: models.py  serializers.py  viewsets.py
core/auth/: permissions.py  tests.py
core/auth/serializers/: login.py  register.py
core/auth/viewsets/: __init__.py  login.py  refresh.py  register.py
core/comment/: models.py  serializers.py  viewsets.py
core/comment/tests/: test_models.py  test_viewsets.py
core/fixtures/: comment.py  user.py
core/post/: models.py  serializers.py  viewsets.py
core/post/migrations/: 0001_initial.py  0002_rename_postmodel_post.py
core/post/tests/: test_viewsets.py
core/user/: models.py  serializers.py  viewsets.py
core/user/migrations/: 0001_initial.py
core/user/tests/: test_models.py  test_viewsets.py
social-media-app/: package.json
social-media-app/src/: App.js  index.js
social-media-app/src/components/: Navbar.jsx
social-media-app/src/components/authentication/: RegistrationForm.jsx
social-media-app/src/components/profile/: ProfileCard.jsx  ProfileDetails.jsx  UpdateProfileForm.jsx
social-media-app/src/hooks/: user.actions.js
social-media-app/src/pages/: Home.jsx  Registration.jsx
